112. More LP64 fixes, a few places were still using ints for taskIds
113. Activate the code that sets pthread scheduler policy and parameters
     for new tasks if available

Version 2.9, 11 february 2011

112. Implement taskSpawn2() a version of taskSpawn() that takes a single
     void pointer for arguments. This is the only working solution on 
     x86_64 architectures, because of the C calling conventions used there.
111. Implement remotePosterShow().
110. Add a regression test for parameters passig with taskSpawn.
109. Fix logMsg() on LP64 architectures.
108. Produce an error if trying to create a device name longer than 
     H2_DEV_MAX_DEVICE_NAME
107. Make remotePosterLib/posterServ LP64 safe.
106. Change posterServ to use local poster functions only.
105. taskLib: make sure each task gets at least 64k of stack space.

Version 2.8, 22, September, 2010

104. Nuke RCS ids in source files.
103. Call mlockall() in h2initGlob() when running under Xenomai.
102. Go back to pmap_unset() to unregister pre-existing posterServer service.
101. Fixes for building Xenomai support.
100. Fixes for cross-compilation in OpenEmbedded
 99. Display the ntick field of poster's timestamps in posterShow().
 98. Enforce stack size in taskSpawn() using pthread_attr_setstacksize().

Version 2.7, 16 april 2010

 97. Fix updating 'ntick' field in H2TIME timespamps of posters.
     (fallout from change #94, which broke pom-genom).

Version 2.6, 13 April 2010

 96. On Linux systems, let taskSuspend() throw a backtrace to stderr.
 95. Use a pipe to wait until h2dev lock is ready before launching posterServ.
 94. Implement poster time stamps using H2TIMESPEC instead of H2TIME. 
 93. Don't start posterServ if it cannot find h2 devices.
 92. Add regression tests for h2time conversion functions
 91. Constify posterName arguments in posterLib.
 90. A few more fixes for running modules on Darwin.
 89. Add regression tests for h2 semaphores.